--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 #  Local .terraform directories
 **/.terraform/*
 
+/terraform/
+
 **/plan.tfplan
 **/*.tfplan
 
@@ -16,3 +18,4 @@
 
 # .tfvars files
 *.tfvars
+
